<resources>
    <string name="conectando_bluetooth">Conectando bluetooth...</string>
    <string name="bluetooth_no_emparejado">Debe emparejar el bluetooth antes de entrar en la aplicación. Salga e inténtelo de nuevo.</string>
    <string name="bluetooth_no_encendido">Debe encender el bluetooth antes de entrar en la aplicación. Salga e inténtelo de nuevo.</string>
    <string name="bateria_baja">Batería baja, debe cambiar las pilas</string>
    <string name="nombre_amplicacion">EEG Mindroid GokEvolution</string>
	<string name="bluetooth">Bluetooth</string>
    <string name="title_activity_eeg__mindroid">EEG Mindroid Training</string>
    <string name="calidad_conexion">Calidad Conexión</string>
    <string name="porcentaje_inicial_bateria">100%</string>
    <string name="tiempo_seleccion">Tiempo: 10s</string>
    <string name="segundos_seleccion">10s</string>
    <string name="txt_sesion">SESIÓN</string>
    <string name="nivel_concentracion">Concentración</string>
    <string name="nivel_normal">GokEvolution Normal</string>
    <string name="nivel_ssj1">GokEvolution SSJ1</string>
    <string name="nivel_ssj2">GokEvolution SSJ2</string>
    <string name="nivel_ssj3">GokEvolution SSJ3</string>
    <string name="nivel_ssj4">GokEvolution SSJ4</string>
	<string name="btn_marcar_tlf_bajar">Bajar</string>
	<string name="btn_marcar_tlf_subir">Subir</string>
	<string name="btn_marcar_tlf_final">Final</string>
	<string name="btn_marcar_tlf_inicio">Inicio</string>
	<string name="btn_marcar_tlf_cero">0</string>
	<string name="btn_marcar_tlf_uno">1</string>
	<string name="btn_marcar_tlf_dos">2</string>
	<string name="btn_marcar_tlf_tres">3</string>
	<string name="btn_marcar_tlf_cuatro">4</string>
	<string name="btn_marcar_tlf_cinco">5</string>
	<string name="btn_marcar_tlf_seis">6</string>
	<string name="btn_marcar_tlf_siete">7</string>
	<string name="btn_marcar_tlf_ocho">8</string>
	<string name="btn_marcar_tlf_nueve">9</string>
	<string name="btn_marcar_tlf_asterisco">*</string>
	<string name="btn_marcar_tlf_almohadilla">#</string>
	<string name="txt_marcar_tlf_introduzca_tlf">Introduzca un teléfono</string>
	<string name="btn_marcar_tlf_salir">Salir</string>
	<string name="btn_empezar">Empezar</string>
	<string name="btn_pausar">Pausar</string>
	<string name="btn_continuar">Continuar</string>
	<string name="btn_parar">Parar</string>
	<string name="txt_sesion_finalizada">FINALIZADO</string>
	<string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="menu_salir_texto">¿Estás seguro de que deseas salir?</string>
    <string name="menu_salir">Salir</string>
    <string name="menu_parar">Parar</string>
    <string name="menu_parar_texto">¿Estás seguro de que deseas parar y borrar todos los datos guardados?</string>
    <string name="menu_parar_gokevolution">¿Estás seguro de que deseas parar y volver a GokEvolution al estado normal?</string>
    <string name="txt_guardar_datos">Guardar datos</string>
    <string name="txt_guardar_datos_texto">Si está activado se guardarán los datos en la base datos. Si no está activado, ningún dato será guardado.</string>
    <string name="txt_eliminar_datos">Eliminar datos</string>
    <string name="txt_eliminar_datos_texto">Eliminar todos los datos almacenados en la base de datos</string>
    <string name="txt_ver_datos">Ver datos guardados</string>
    <string name="txt_ver_datos_texto">Se muestran los datos de las diferentes sesiones guardadas en la base de datos</string>
    <string name="txt_exportar_datos">Exportar datos</string>
    <string name="txt_exportar_datos_texto">Exportar la base de datos a la memoria del teléfono/tablet. Debe realizarse la exportación después de completar todas las sesiones del día</string>
    <string name="txt_datos_eliminados">Datos borrados</string>
    <string name="txt_datos_exportados">Datos exportados en</string>
    <string name="txt_borrar_datos">¿Estás seguro de que quieres borrar todos los datos?</string>
    <string name="txt_borrar_datos_arriba">Borrar datos</string>
    <string name="txt_borrar_pulsar_5_veces">Para borrar haga 5 clicks</string>
    <string name="txt_exportar_pulsar_5_veces">Para exportar haga 5 clicks</string>
    <string name="txt_no_datos_guardados">No hay datos guardados :(</string>
    <string name="txt_no_datos_guardados_exportar">No hay datos guardados para exportar :(</string>
    <string name="txt_error_exportar_datos">Error! No se han podido exportar los datos :(</string>
    <string name="txt_fecha_captura_datos">Fecha captura datos EEG:</string>
	<string name="txt_titulo_exportar_datos">Exportar</string>
	<string name="txt_mensaje_exportar_datos">Exportando datos...</string>
	<string name="txt_titulo_cargando_datos">Cargando</string>
	<string name="txt_mensaje_cargando_datos">Cargando imágenes y sonidos, espere por favor...</string>
    <string name="eeg_señal">Señal</string>
    <string name="eeg_concentracion">Concentración</string>
    <string name="eeg_relajacion">Relajación</string>
    <string name="eeg_delta">Delta</string>
    <string name="eeg_theta">Theta</string>
    <string name="eeg_low_alpha">Alfa Bajo</string>
    <string name="eeg_high_alpha">Alfa Alto</string>
    <string name="eeg_low_beta">Beta Bajo</string>
    <string name="eeg_high_beta">Beta Alto</string>
    <string name="eeg_low_gamma">Gamma Bajo</string>
    <string name="eeg_high_gamma">Gamma Alto</string>
    <string name="eeg_concentracion_iniciales">CON</string>
    <string name="eeg_relajacion_iniciales">REL</string>
    <string name="eeg_delta_iniciales">DEL</string>
    <string name="eeg_theta_iniciales">THE</string>
    <string name="eeg_low_alpha_iniciales">ALB</string>
    <string name="eeg_high_alpha_iniciales">ALA</string>
    <string name="eeg_low_beta_iniciales">BEB</string>
    <string name="eeg_high_beta_iniciales">BEA</string>
    <string name="eeg_low_gamma_iniciales">GAB</string>
    <string name="eeg_high_gamma_iniciales">GAA</string>
    <string name="segundos_graficas_defecto">50s</string>
    <string name="titulo_grafica_barras">ELECTROENCEFALOGRAMA\u0020 (EEG)</string>
    <string name="titulo_grafica_historica">HISTORICO\u0020 ELECTROENCEFALOGRAMA\u0020 (EEG)</string>
    <string name="valores_señales_graficas">VALORES\u0020 SEÑALES\u0020 EEG</string>
    <string name="segundos_grafica_historica">SEGUNDOS</string>
    <string name="error_bt_no_encontrado">No se ha encontrado ningún dispositivo bluetooth</string>
    <string name="btn_aplicaciones">Aplicaciones</string>
    <string name="btn_juegos">Juegos</string>
    <string name="btn_entrenamiento">Entrenamiento</string>
    <string name="btn_opciones">Opciones</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_menu_aplicaciones_volver">Volver atrás</string>
    <string name="btn_menu_aplicaciones_marcar_tlf">Marcar número de teléfono</string>
    <string name="btn_grafica_barras">Gráfica Barras</string>
    <string name="btn_grafica_historica">Gráfica Histórica</string>
    <string name="btn_gokevolution">GokEvolution</string>
    <string name="btn_opciones_generales">Generales</string>
    <string name="btn_opciones_base_datos">Base datos</string>
    <string name="btn_opciones_ayuda">Ayuda</string>
    <string name="btn_opciones_acercade">Acerca de...</string>
    <string name="btn_opciones_idioma">Idioma</string>
    <string name="btn_opciones_salir">Salir</string>
    <string name="txt_sonido">Sonido</string>
    <string name="txt_sonido_descripcion">Activar o desactivar los sonidos realizados por GokEvolution</string>
    <string name="txt_musica">Música</string>
    <string name="txt_musica_descripcion">Activar o desactivar la música de fondo</string>
    <string name="txt_general_opciones_generales">Opciones Generales</string>
    <string name="txt_general_opciones_dificultad">Dificultad</string>
    <string name="txt_general_tipo_menu">Tipo menú </string>
    <string name="txt_general_tipo_menu_descripcion">Dos tipos de menús, sólo táctil con interfaz normal 
        o táctil/mental con interfaz para elegir las opciones con la mente y/o haciendo click con el dedo. Esto afectará
        únicamente al menú de las opciones por comodidad. En el resto de la aplicación se aplica la interfaz mente/click</string>
    <string name="txt_general_vista_normal">Menú táctil</string>
    <string name="txt_general_vista_eeg">Menú táctil/mental</string>
    <string name="txt_general_dificultad">Dificultad </string>
    <string name="txt_general_dificultad_descripcion">La diferencia entre cada uno de los niveles es la cantidad de puntos que se suman y 
        se restan en función del nivel de concentración que tengamos. Para un nivel fácil se sumará más y se restará menos que un nivel más difícil.
        Para sumar puntos es necesario tener un 50%% o más de concentración. Con menos concentración restaremos puntos.</string>
    <string name="txt_general_musica">Música </string>
    <string name="txt_general_musica_descripcion">Diferentes músicas de fondo. NOTA: Entre paréntesis pone cuando suena la canción en la serie,
         pero no quiere decir que sea sólo en ese momento, pudiéndose repetir en otras partes.</string>
    <string name="txt_general_tiempo_sesion">Tiempo sesión </string>
    <string name="txt_general_tiempo_sesion_descripcion">Tiempo que dura una sesión completa. Se divide en dos partes con el mismo tiempo cada una, 
        la primera parte de concentración o desconcentración y la segunda parte de reposo.
        </string>
    <string name="txt_general_numero_sesiones">Número sesiones </string>
    <string name="txt_general_numero_sesiones_descripcion">Número de sesiones que componen una prueba completa. La duración de cada sesión viene
        indicada por la opción de tiempo de sesión 
        </string>
    <string name="txt_1segundos">1 segundo</string>
    <string name="txt_2segundos">2 segundos</string>
    <string name="txt_3segundos">3 segundos</string>
    <string name="txt_4segundos">4 segundos</string>
    <string name="txt_5segundos">5 segundos</string>
    <string name="txt_6segundos">6 segundos</string>
    <string name="txt_7segundos">7 segundos</string>
    <string name="txt_8segundos">8 segundos</string>
    <string name="txt_9segundos">9 segundos</string>
    <string name="txt_10segundos">10 segundos</string>
    <string name="txt_11segundos">11 segundos</string>
    <string name="txt_12segundos">12 segundos</string>
    <string name="txt_13segundos">13 segundos</string>
    <string name="txt_14segundos">14 segundos</string>
    <string name="txt_15segundos">15 segundos</string>
    <string name="txt_16segundos">16 segundos</string>
    <string name="txt_17segundos">17 segundos</string>
    <string name="txt_18segundos">18 segundos</string>
    <string name="txt_19segundos">19 segundos</string>
    <string name="txt_20segundos">20 segundos</string>
    <string name="txt_21segundos">21 segundos</string>
    <string name="txt_22segundos">22 segundos</string>
    <string name="txt_23segundos">23 segundos</string>
    <string name="txt_24segundos">24 segundos</string>
    <string name="txt_25segundos">25 segundos</string>
    <string name="txt_26segundos">26 segundos</string>
    <string name="txt_27segundos">27 segundos</string>
    <string name="txt_28segundos">28 segundos</string>
    <string name="txt_29segundos">29 segundos</string>
    <string name="txt_31segundos">31 segundos</string>
    <string name="txt_32segundos">32 segundos</string>
    <string name="txt_33segundos">33 segundos</string>
    <string name="txt_34segundos">34 segundos</string>
    <string name="txt_35segundos">35 segundos</string>
    <string name="txt_36segundos">36 segundos</string>
    <string name="txt_37segundos">37 segundos</string>
    <string name="txt_38segundos">38 segundos</string>
    <string name="txt_39segundos">39 segundos</string>
    <string name="txt_41segundos">41 segundos</string>
</resources>