<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imagenCalidadConexion"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/circle_green"/>

        <TextView
            android:id="@+id/textoCalidadConexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calidad_conexion"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/textoPorcentajeBateria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="0.5dp"
            android:text="@string/porcentaje_inicial_bateria"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/imagenPorcentajeBateria"
            android:layout_width="20dp"
            android:layout_height="16dp"
            android:layout_marginTop="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/bateria100_92" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <TextView
                android:id="@+id/txt_contador_grafica_barras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:text="@string/segundos_graficas_defecto"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <com.androidplot.xy.XYPlot
        	android:id="@+id/graficaSeñalesBarrasEEG"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            title="@string/titulo_grafica_barras" />
    </LinearLayout>

</LinearLayout>