<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:background="@android:color/darker_gray">
	
     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >
 
	        <ImageView
	            android:id="@+id/imagenCalidadConexion"
	            android:layout_width="18dp"
	            android:layout_height="18dp"
	            android:scaleType="fitXY"
	            android:layout_gravity="left"
	            android:src="@drawable/circle_red"/>

	        <TextView
	            android:id="@+id/textoPorcentajeBateria"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="6dp"
	            android:layout_marginRight="0.5dp"
	            android:textColor="@android:color/black"
	            android:text="@string/porcentaje_inicial_bateria" />

	        <ImageView
	            android:id="@+id/imagenPorcentajeBateria"
	            android:layout_width="20dp"
	            android:layout_height="16dp"
	            android:scaleType="fitXY"
	            android:src="@drawable/bateria100_92"/>
	    </LinearLayout>
	    
        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:orientation="horizontal" >
		    <LinearLayout
		        android:layout_width="30dp"
		        android:layout_height="match_parent"
		        android:orientation="vertical" 
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="8dp">
			
		        <com.app.eeg_mindroid_gokevolution.VerticalProgressBar
			        style="?android:attr/progressBarStyleHorizontal"
			        android:id="@+id/progressbarConcentracion"
			        android:layout_width="match_parent"
			        android:layout_height="fill_parent" 
			        android:progressDrawable="@drawable/menu_progressbar_concentracion"
			        android:layout_marginTop="8dp"
			        android:layout_marginBottom="3dp"
			        android:max="100"
			        />
		    </LinearLayout>
	
		    <LinearLayout
		        android:layout_width="30dp"
		        android:layout_height="match_parent"
		        android:orientation="vertical"
		        android:layout_marginRight="1dp">
		        
		        <com.app.eeg_mindroid_gokevolution.VerticalProgressBar
			        style="?android:attr/progressBarStyleHorizontal"
			        android:id="@+id/progressbarSeleccion"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent" 
			        android:progressDrawable="@drawable/menu_progressbar_seleccion"
			        android:layout_marginTop="8dp"
			        android:layout_marginBottom="3dp"
			        android:max="100"
			        />
			
		    </LinearLayout>
		</LinearLayout>
	</LinearLayout>
	
    <LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:orientation="vertical" >
		<View
			android:layout_width="1dp"
			android:layout_height="match_parent"
			android:background="@android:color/white" 
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"/>
	</LinearLayout>

    <LinearLayout
        android:id="@+id/linearImagenReposo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">

		<LinearLayout
		    android:id="@+id/linearSuperior"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginBottom="5dp" >

		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="5dp"
		        android:orientation="horizontal" >

			    <Button
			        android:id="@+id/btn_empezar_terminar"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="4dp"
			        android:layout_marginBottom="4dp"
			        android:gravity="left"
			        android:background="@drawable/boton_menu"
			        android:text="@string/btn_empezar" 
			        android:layout_marginRight="5dp"/>
			    <Button
			        android:id="@+id/btn_pausar"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="4dp"
			        android:layout_marginBottom="4dp"
			        android:layout_marginRight="20dp"
			        android:gravity="left"
			        android:background="@drawable/boton_menu"
			        android:text="@string/btn_pausar" />
				<Button
			        android:id="@+id/btn_opciones"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="4dp"
			        android:layout_marginBottom="4dp"
			        android:gravity="left"
			        android:background="@drawable/boton_menu"
			        android:text="@string/btn_opciones" 
			        android:layout_marginRight="5dp"/>
				<Button
			        android:id="@+id/btn_salir"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="4dp"
			        android:layout_marginBottom="4dp"
			        android:gravity="left"
			        android:background="@drawable/boton_menu"
			        android:text="@string/btn_salir" />
			</LinearLayout>

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:layout_marginBottom="5dp"
			    android:orientation="horizontal" >

			    <TextView
			        android:id="@+id/textoSesion"
			        android:layout_width="0dp"
			        android:layout_height="match_parent"
			        android:layout_marginRight="10dp"
			        android:layout_weight="1"
			        android:gravity="center"
			        android:text="@string/txt_sesion"
			        android:textColor="@android:color/black"
			        android:textSize="20sp" />

			    <TextView
			        android:id="@+id/textoSegundosSeleccion"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:layout_marginRight="10dp"
			        android:gravity="fill_vertical"
			        android:text="@string/segundos_seleccion"
			        android:textColor="@android:color/black"
			        android:textSize="25sp" />

			    <ImageView
			        android:id="@+id/imagenMindClock"
			        android:layout_width="27dp"
			        android:layout_height="34dp"
			        android:layout_gravity="center|center_horizontal"
			        android:scaleType="fitXY"
			        android:src="@drawable/mind_clock" />
			</LinearLayout>

		</LinearLayout>	
		
		<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >
			
		    <FrameLayout
		        android:layout_width="match_parent"
		        android:layout_height="match_parent" >
		    	
		       <!-- <ImageView
		            android:id="@+id/imagenReposo"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_gravity="center"
		            android:visibility="visible"
		            android:src="@drawable/reposo"/> -->
			    <com.app.eeg_mindroid_gokevolution.VerticalProgressBar
				        style="?android:attr/progressBarStyleHorizontal"
				        android:id="@+id/progressbarConcentracionEntrenamiento"
				        android:layout_width="match_parent"
				        android:layout_height="match_parent" 
				        android:layout_marginTop="8dp"
				        android:layout_marginBottom="15dp"
				        android:layout_marginLeft="8dp"
				        android:layout_marginRight="8dp"
				        android:max="100"
				        android:progressDrawable="@drawable/menu_progressbar_concentracion_entrenamiento"/>
			    
		    </FrameLayout>
		</LinearLayout>
    </LinearLayout>

</LinearLayout>